@startuml 09_add_not_match_past_mode

note as note_main
  背景がピンク：新規に作成したクラス
  背景がオレンジ：修正したクラス
end note

class Main {
  + {static} main()
}

package business {
  class TypingGame {
    - TypingGameDifficulty difficulty
    - TypingGameListener listener
    - NextQuestionGenerator generator
    - List<QuestionResult> results
    - ZonedDateTime startTime
    - ZonedDateTime endTime
    + TypingGame(TypingGameDifficulty difficulty, TypingGameListener listener, NextQuestionGenerator generator)
    + void execute()
    + List<QuestionResult> getResults()
    + long getTimeToCalculate()
    + boolean isSameDifficulty(TypingGameDifficulty difficulty)
    + int getNumberOfQuestions()
    - String toString()
  }

  interface TypingGameListener {
    void onGameStart(TypingGame typingGame)
    void onGameEnd(TypingGame typingGame)
    String receiveAnswer(Question question)
    void onJudgeOK(TypingGame typingGame)
    void onJudgeNG(TypingGame typingGame)
  }

  interface NextQuestionGenerator {
    Question generate()
  }

  abstract class AbstractNextQuestionGenerator #Pink implements NextQuestionGenerator {
    - List<Question> questions
    + AbstractNextQuestionGenerator(List<Question> questions)  
  }
  note right of AbstractNextQuestionGenerator
    questionsは両方の実装クラスで持つため、抽象クラスをインターフェースと間に挟んで、
    変数を持たせるようにした。
  end note

  class NotMatchPreviousNextQuestionGenerator #Orange extends AbstractNextQuestionGenerator {
    - Question prevQuestion
    + NotMatchPreviousNextQuestionGenerator(List<Question> questions)
  }

  class NotMatchPastNextQuestionGenerator #Pink extends AbstractNextQuestionGenerator {
    - Set<Question> askedQuestions
    + NotMatchPastNextQuestionGenerator(List<Question> questions)
  }
  note bottom of NotMatchPastNextQuestionGenerator
    NextQuestionGeneratorの新しい実装クラスを追加した。
  end note

  enum TypingGameMode {
    + NORMAL
    + HOT
    ..
    - String name
    - int mode
    - boolean defaultMode
    __
    + TypingGameMode(String name, int mode, boolean defaultMode)
    + {static} TypingGameMode of(int mode)
    + {static} TypingGameMode getDefault()
    + String getName()
    + int getMode()
  }

  enum NextQuestionGeneratorMode #Pink {
    + NOT_MATCH_PREVIOUS
    + NOT_MATCH_PAST
    ..
    - String name
    - int mode
    - boolean defaultLevel
    __
    + NextQuestionGeneratorMode(String name, int mode, boolean defaultMode)
    + {static} NextQuestionGeneratorMode of(int mode)
    + {static} NextQuestionGeneratorMode getDefault()
    + String getName()
    + int getMode()
  }

  enum TypingGameDifficulty {
    + EASY
    + NORMAL
    + HARD
    ..
    - String name
    - int level
    - boolean defaultLevel
    __
    + TypingGameDifficulty(String name, int level, boolean defaultLevel)
    + {static} TypingGameDifficulty of(int level)
    + {static} TypingGameDifficulty getDefault()
    + String getName()
    + int getLevel()
    + boolean lessThan(TypingGameDifficulty difficulty)
  }

  class TypingGameHistory {
    - List<TypingGame> typingGames
    + void add(TypingGame typingGame)
    + List<TypingGame> sortedTypingGames(TypingGameDifficulty difficulty)
    - List<TypingGame> getTypingGames(TypingGameDifficulty difficulty)
  }

  class TypingGameFactory #Orange {
    + {static} TypingGame generate(TypingGameDifficulty difficulty, TypingGameMode typingGameMode)
  }
  note top
    TypingGameFactoryでNextQuestionGeneratorの
    実装クラスを切り替えられるように修正。
  end note

  class Question {
    - String word
    - TypingGameDifficulty difficulty
    + Question(String word, TypingGameDifficulty difficulty)
    + String getWord()
  }

  class QuestionResult {
    - Question question
    - String answer
    - boolean judge
    + QuestionResult(Question question, String answer, boolean judge)
    + Question getQuestion()
    + String getAnswer()
    + boolean isJudge()
  }

  class QuestionFactory {
    + static List<Question> generate(TypingGameDifficulty difficulty)
    - static List<Question> generate()
  }
}

package ui {
  class ConsoleConductor #Orange {
    + execute()
    - TypingGameDifficulty displayInputDifficulty()
    - TypingGameMode displayInputMode()
    - NextQuestionGeneratorMode displayInputCalculatorMode()
    - void displayCountDown()
    - void displayResult(TypingGame typingGame)
    - void displayRanking(TypingGameHistory typingGameHistory, TypingGameDifficulty difficulty)
    - boolean displayInputRetry()
    - static int getInputInt(int defaultValue)
  }
  note bottom of ConsoleConductor
    問題生成モードを標準入出力から受け取るために、
    displayInputCalculatorModeを追加した。
  end note

  class NormalTypingGameListener implements TypingGameListener

  class HotTypingGameListener implements TypingGameListener

  class StandardInputReader {}
}

Main -l- ConsoleConductor : use >

ConsoleConductor -- TypingGameFactory : use >
ConsoleConductor -- StandardInputReader : use >

TypingGameFactory -- QuestionFactory : use >
TypingGameFactory -- TypingGameMode : use >
TypingGameFactory -- NextQuestionGeneratorMode : use >

TypingGameFactory -- TypingGame : generate >

QuestionFactory -- Question : generate >

TypingGameHistory --> TypingGame
TypingGame --> TypingGameDifficulty
TypingGame --> Question
TypingGame --> QuestionResult
TypingGame --> TypingGameListener
TypingGame --> NextQuestionGenerator

NormalTypingGameListener -- StandardInputReader : use >
HotTypingGameListener -- StandardInputReader : use >

@enduml
